Update Spring Version